k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: resource
spec: 
  replicas: 1
  selector:
    matchLabels:
      component: app
  template:
    metadata:
      labels:
        component: app
    spec:
      containers:
        - name: resource-share-backend
          image: joty46/resource_sharing_app-backend:v1
          ports:
            - containerPort: 8000
