k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: resource
spec: 
  replicas: 1
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: resource-sharing-app-frontend
          image: joty46/resource_sharing_app-frontend:v34
          ports:
            - containerPort: 3000
