k8s/backend-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-cluster-ip-service
  namespace: resource
spec:
  type: ClusterIP
  selector:
    component: app
  ports:
    - port: 8000
      targetPort: 8000
