k8s/db-clusterip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-cluster-ip-service
  namespace: resource
spec:
  type: ClusterIP
  selector: 
    component: postgres
  ports:
    - port: 5432
      targetPort: 5432
