k8s/forntend-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-cluster-ip-service
  namespace: resource
spec:
  type: ClusterIP
  selector:
    component: web
  ports:
    - port: 3030
      targetPort: 3030
