k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service-resource
  namespace: resource
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /resource
            pathType: Prefix
            backend:
              service:
                name: frontend-cluster-ip-service
                port: 
                  number: 3000
